# Cloud9

./: IMPLEMENTATION_GUIDE.md  README.md
backend/: .env  .gitignore  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  docker-compose.yml  fly.toml  manage.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py
backend/app/models/: base.py  payment.py  product.py  user.py
backend/app/schemas/: payment.py
backend/app/search/: elastic.py
backend/cloud9/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
backend/crypto_payments/: admin.py  apps.py  exceptions.py  models.py  node_integration.py  node_service.py  payment_server.py  payment_service.py  services.py  settings.example.py  tasks.py  tests.py  urls.py  wallet.py
backend/crypto_payments/migrations/: 0001_initial.py  0002_add_admin_models.py  0002_add_wallet_types.py  0003_add_deposit_address.py  0003_security_models.py
backend/crypto_payments/models/: __init__.py  admin.py  (+6 more)
backend/docs/: DEPLOYMENT.md
backend/marketplace/: admin.py  consumers.py  context_processors.py  decorators.py  forms.py  middleware.py  mixins.py  models.py  routing.py  search_indexes.py  settings.example.py  tasks.py  tests.py  urls.py  views.py
backend/scripts/: analyze_models.py  analyze_oscar_models.py  check_oscar_config.py
backend/support/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/templates/: base.html
backend/tor_access/: __init__.py  apps.py  middleware.py  tests.py  urls.py
(+157 files in other folders)
